# LSPlantHook

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: release.yml
hook/: build.gradle.kts
hook/src/main/cpp/: CMakeLists.txt  aliuhook.cpp  aliuhook.h  elf_img.cpp  hidden_api.cpp  hidden_api.h  invoke_constructor.cpp  invoke_constructor.h  log.h  profile_saver.cpp  profile_saver.h  songkit.map
hook/src/main/java/com/android/bridge/: TsBridge.java
hook/src/main/java/com/android/engine/: HookEngine.java  HookEntry.java
hook/src/main/java/com/android/engine/callbacks/: CallbackBase.java  IUnhook.java
lsplant/src/main/jni/: logging.hpp  lsplant.cc
lsplant/src/main/jni/art/runtime/: class_linker.cxx
lsplant/src/main/jni/include/: lsplant.hpp
